fix: topbar on mobile for nav

--- a/_sass/layout/_topbar.scss
+++ b/_sass/layout/_topbar.scss
@@ -17,6 +17,12 @@
   }
 }
 
+#topbar-wrapper.home-mobile-topbar {
+  @include bp.lg {
+    display: none;
+  }
+}
+
 #topbar {
   @extend %btn-color;
 
